Add SalesOrder api controller and update http client
